# rust-screen-recorder-ffmpeg

./: .gitignore  COMMANDS.md  Cargo.toml  EXAMPLES.md  GETTING_STARTED.md  LICENSE  MOUSE.md  README.md  USAGE.md  build.ps1  package.ps1  run.ps1
release/: README.md  使用说明.txt  快速启动.bat
src/: config.rs  error.rs  ffmpeg_encoder.rs  main.rs  native_capture.rs  screen_capture.rs  stream.rs
