[package]
name = "screen_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Windows 屏幕捕获
[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = [
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
